--- a/.env.exemple
+++ b/.env.exemple
@@ -1,12 +1,11 @@
 # Stripe
 NEXT_PUBLIC_STRIPE_PUBLIC_KEY=
 STRIPE_API_KEY=
-STRIPE_SUCCESS_URL=
-STRIPE_CANCEL_URL=
+STRIPE_SUCCESS_URL=http://localhost:3000/posts
+STRIPE_CANCEL_URL=http://localhost:3000
 STRIPE_WEBHOOK_SECRET=
 
 NEXTAUTH_URL=
-
 JWT_SIGNING_PRIVATE_KEY=
 
 # GitHub
